--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "passport-google-oauth2": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
