--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
-    "nodemon": "^2.0.6"
+    "@types/node": "^16.11.12",
+    "nodemon": "^2.0.6",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.2"
   }
 }
